src/css/base.css
/* ... */
/* ocmd */

#output {
  display: block;
  overflow-x: auto;
  height: 200px;
}

#output .error {
  color: red;
}

#output ul, #output li {
  list-style: none;
  text-indent: 0;
}

#output > ul {
  margin-left: 0;
}

/* resizable modal */
.modal .content {
  height: 100%;
  overflow: hidden;
}

.modal .modal-body {
  max-height: none;
}

.ui-resizable-handle { z-index: auto !important; }

.ui-resizable-s {
  bottom: 0;
}
.ui-resizable-e {
  right: 0;
}

.ui-resizable-se {
  position: absolute;
  bottom: 5px;
  right: 5px;
  height: 10px;
  width: 10px;
}

.ui-resizable-se:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  border-bottom: 10px solid #666;
  border-left: 10px solid transparent;
}

.step {
  border: 1px solid #666;
  border-radius: 5px;
  font-size: 150%;
  text-align: center;
  font-weight: bold;
  min-height: 80px;
}

.step-level {
  position: relative;
  margin-bottom: 20px;
  overflow: hidden;
}

/*.step-level:not(:last-child):after {
  content: "\f063";
  display: block;
  color: #666;
  font-family: 'FontAwesome';
  font-size: 150%;
  left: 50%;
  top: 100%;
  margin-left: -.5em;
  position: absolute;
}*/

.step-normal {
  background-color: '#fff';
}

/* diagram */ 

#canvas-wrapper {
  position: relative;
  overflow: hidden;
  width: 100%;
  height: auto;
}

#canvas-container { 
  position: relative; 
  width: 100%; 
  height: 100%; 
  overflow: hidden; 
  position: relative; 
}

#canvas { 
  position: absolute; 
}

#diagram {
  font-size: 90%;
  min-height: 500px;
}

/*#order-info .table {
  table-layout: fixed;
}*/

#step-diagram {
  float:left;
  min-width: 200px;
  max-width: 50%;
  overflow: auto;
}

#step-diagram-details {
  padding-left: 40px;
  overflow:hidden;
}

.level {
  text-align: center;
  overflow: hidden;
  padding: 10px 0;
  margin-bottom: 0;
  width: 100%;
}

.box {
  display: inline-block;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,.2);
  font-weight: bold;
  box-shadow: 0 0 10px rgba(0,0,0,.5);
  min-height: 40px;
  margin: 5px;
  min-width: 150px;
  overflow: hidden;
}

.box a {
  display: block;
  color: #000;
  height: 100%;
  padding: 10px 2%;
}

.box a:hover {
  text-decoration: none;
}

.box.process {
  border-radius: 5px;
}

.box.async {
  background-color: #d9edf7;
}

.box.subworkflow {
  background-color: #e5c737;
}

.box.start {
  padding: 0;
  border-radius: 50%;
  background-color: #fff;
}

.box.start a {
  padding: 12px 10%;
}

.box.ok {
  background-color: #c5e08c;
}

.box.error {
  background-color: #da4f49;
  *background-color: #bd362f;
}

.box.error a {
	color: #fff;
}

.box.selected {
  box-shadow: 0 0 20px rgba(0, 86, 134, 1);
}

.indent {
  display: inline-block;
  width: 1em;
} 


/* chart styling */

.chart-box {
  float: left;
  position: relative;
  overflow: hidden;
  width: auto;
  margin-right: 40px;
}

.chart {
  margin: 0 0 30px 50px;
}

.chart.pie {
  margin-left: 0;
}

.chart-left-axis-label {
  position: absolute;
  transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -webkit-transform: rotate(-90deg);
  -webkig-font-smoothing: antialiased;
  top: 35%;
  left: 0;
}

.chart-bottom-axis-label {
  position: absolute;
  bottom: 0;
  left: 50%;
  margin-left: 0; 
}

.chart-legend {
  list-style: none;
  text-indent: 0;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.chart-legend-box {
  display: inline-block;
  width: 20px; 
  height: 10px; 
}

#log {
	overflow: hidden;
}

.log-area, .log-area.span12 {
	background-color: #0a0f21;
	overflow: auto;
	min-height: 200px;
  padding: 10px;
	margin: 0;
}

.log-area pre {
  background-color: #000;
  color: #fff;
	font-size: 80%;
	margin: 0;
	border-radius: 0;
	padding: 0;
	line-height: 1em;
}

/** fixed header **/

.table-fixed-wrapper {
    position: relative;
    height: 100%;
}

.table-fixed-inner {
    overflow-x: hidden;
    overflow-y: auto;
    height: 100%;
}

.table-fixed .inner {
    position: absolute;
    padding-right: 1em;
    top: 0;
    height: inherit;
    z-index: 1021;
    border-right: 1px solid rgba(0,0,0,.1);
}

.table-fixed th:last-child .inner {
  border-right: none;
}


.table-fixed .sort-asc:after {
  content: "\f0d7";
  font-family: FontAwesome;
  font-size: 120%;
  margin-left: .2em;
}

.table-fixed .sort-des:after {
  content: "\f0d8";
  font-family: FontAwesome;
  font-size: 120%;
  margin-left: .2em;
}

.table-fixed {
	margin-bottom: 0;
}

table .header-copy {
  border: 0;
}

.header-copy th {
  border: 0;
}

.table-fixed th {
  border-right: 1px solid #ddd;
}

.table-fixed thead th:last-child {
  border: 0;
}

.header-copy:after {
	content: "";
	display: block;
	background-color: transparent;
	height:  1px;
	margin: 0 .5%;
	width: 99%;
	box-shadow: 0 5px 10px rgba(0,0,0,.8);
}

td.date {
  white-space: nowrap;
}

td.nowrap {
  white-space: nowrap;
}

#alert-detail {
  position: absolute;
  position: fixed;
    background-color: rgba(245,245,245,0.9);
  box-shadow: 0 0 5px rgba(0,0,0,.5);
  right: 0;
  top: 0;
  height: 100%;
  max-width: 500px;
  margin: 0;
  padding: 40px 0 0 0;
}

.alert-detail {
	padding: 10px;
}

#header .status {
  margin-top: -10px;
}

#header .pull-right div {
  float: left;
}

#notifications-icon a {
  display: block;
  color: #fff;
  padding: 10px;
  margin-left: 10px;
  position: relative;
}

#notifications-icon a:hover {
  text-decoration: none;
}

#notifications-icon a .badge {
  position: absolute;
  right: 0;
  top: 5px;
  padding: 2px 4px;
  margin-bottom: -50%;
}

#notifications-list {
  background-color: #3d3f45;
  font-size: 80%;
  color: #fff;
  position: fixed;
  top: 41px;
  right: -300px;
  overflow: auto;
  width: 300px;
  height: 100%;
  z-index: 1030;
  -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
       -o-transition: all .5s ease-in-out;
          transition: all .5s ease-in-out;
}

#notifications-list:after {
  content: "";
  display: block;
  height: 40px;
}
/* ... */

